<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/appLogo"
            android:src="@mipmap/gradcap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/Email"
                android:src="@mipmap/mail" />

            <Button
                android:id="@+id/loginEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeMaxTextSize="50sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button_login"
                android:padding="10dp"
                android:text="@string/SignInViaEmail"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/Google"
                android:src="@mipmap/google" />

            <Button
                android:id="@+id/loginGoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeMaxTextSize="50sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button_login"
                android:padding="10dp"
                android:text="@string/google_sign_in"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:contentDescription="@string/Facebook"
                android:src="@mipmap/facebook" />

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/no_network_bar">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/loginFacebookButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:autoSizeMaxTextSize="50sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/rounded_button_login"
                    android:onClick="onClickFacebookButton"
                    android:padding="10dp"
                    android:text="@string/facebook_sign_in"
                    android:textColor="@color/white" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:text="@string/SignUpHere"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>