<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".EmailAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/gradcap" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@layout/rounded_textview"
            android:hint="@string/Email"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@layout/rounded_textview"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordAgainField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="50sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@layout/rounded_textview"
            android:hint="@string/PasswordAgain"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:autoSizeMaxTextSize="50sp"
            android:onClick="createEmailAccount"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_button_login"
            android:padding="10dp"
            android:text="@string/CreateAccount"
            android:textColor="@color/white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>